# rsomics-fastqc

./: Cargo.toml  README.md
benches/: bench.rs  fastqc.rs
src/: cli.rs  lib.rs  report.rs
src/modules/: adapter_content.rs  basic_stats.rs  dup_levels.rs  kmer_content.rs  mod.rs  n_content.rs  overrepresented.rs  per_base_content.rs  per_base_quality.rs  per_seq_gc.rs  per_seq_quality.rs  per_tile_quality.rs  seq_length.rs
tests/: compat.rs  smoke.rs
tests/golden/: tiny.fq
