[package]
name = "rsomics-fastqc"
version = "0.1.0"
description = "Per-file FASTQ quality-control report (FastQC-equivalent: per-base quality, GC, N, length, duplication, overrepresented, adapter, k-mer) — independent Rust reimplementation, MultiQC-parseable output."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "quality-control", "fastqc", "multiqc"]

[[bin]]
name = "rsomics-fastqc"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
needletail = { version = "0.7", default-features = false, features = ["compression"] }

[dev-dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5", features = ["test-support", "rayon"] }
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "fastqc"
harness = false

[lints]
workspace = true
