[package]
name = "rsomics-fastqc"
version = "0.1.0"
description = "Per-file FASTQ quality-control report (FastQC-equivalent: per-base quality, GC, N, length, duplication, overrepresented, adapter, k-mer) — independent Rust reimplementation, MultiQC-parseable output."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "quality-control", "fastqc", "multiqc"]

[[bin]]
name = "rsomics-fastqc"
path = "src/main.rs"


[lib]
name = "rsomics_fastqc"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
needletail = { version = "0.7", default-features = false, features = ["compression"] }

[dev-dependencies]
rsomics-common = { version = "0.6", features = ["test-support", "rayon"] }
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fastqc"
harness = false

